--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@material-design-icons/svg": "^0.14.9",
+    "golden-layout": "^2.6.0",
+    "roslib": "^1.3.0",
+    "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.17",
+    "@types/roslib": "^1.3.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.1.0",
