--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@material-design-icons/svg": "^0.14.9",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "golden-layout": "^2.6.0",
+    "leaflet": "^1.9.4",
     "roslib": "^1.3.0",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4"
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^18.16.17",
     "@types/roslib": "^1.3.1",
     "@vitejs/plugin-vue": "^4.2.3",
