icon support, first sidebar iteration

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,6 +18,9 @@
         "./src/*"
       ]
     },
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": [
+      "unplugin-icons/types/vue"
+    ],
   }
 }
