--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@material-design-icons/svg": "^0.14.9",
+    "@iconify/json": "^2.2.86",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "@vue/compiler-sfc": "^3.3.4",
     "golden-layout": "^2.6.0",
     "leaflet": "^1.9.4",
+    "local-pkg": "^0.4.3",
     "roslib": "^1.3.0",
-    "vite-svg-loader": "^4.0.0",
+    "unplugin-icons": "^0.16.3",
+    "unplugin-vue-components": "^0.25.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
