--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,8 +19,10 @@
       ]
     },
     "allowSyntheticDefaultImports": true,
+    "preserveConstEnums": true,
     "types": [
       "unplugin-icons/types/vue"
     ],
+    "verbatimModuleSyntax": false,
   }
 }
