--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@iconify/json": "^2.2.86",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/compiler-sfc": "^3.3.4",
+    "chart.js": "^4.3.0",
     "golden-layout": "^2.6.0",
     "leaflet": "^1.9.4",
     "local-pkg": "^0.4.3",
     "roslib": "^1.3.0",
     "unplugin-icons": "^0.16.3",
     "unplugin-vue-components": "^0.25.1",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
