--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.3.0",
     "golden-layout": "^2.6.0",
     "leaflet": "^1.9.4",
+    "leaflet.utm": "^1.0.0",
     "local-pkg": "^0.4.3",
     "roslib": "^1.3.0",
     "unplugin-icons": "^0.16.3",
@@ -29,6 +30,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/leaflet": "^1.9.3",
+    "@types/leaflet.utm": "^0.0.1",
     "@types/node": "^18.16.17",
     "@types/roslib": "^1.3.1",
     "@vitejs/plugin-vue": "^4.2.3",
