--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "leaflet": "^1.9.4",
     "leaflet.utm": "^1.0.0",
     "local-pkg": "^0.4.3",
+    "quaternion": "^1.4.6",
     "roslib": "^1.3.0",
     "unplugin-icons": "^0.16.3",
     "unplugin-vue-components": "^0.25.1",
