--- a/package.json
+++ b/package.json
@@ -45,5 +45,12 @@
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
     "vue-tsc": "^1.6.5"
+  },
+  "prettier": {
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "arrowParens": "avoid",
+    "endOfLine": "auto"
   }
 }
