--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.3.0",
     "golden-layout": "^2.6.0",
     "leaflet": "^1.9.4",
+    "leaflet-ellipse": "link:custom_node_modules\\leaflet-ellipse",
     "leaflet.utm": "^1.0.0",
     "local-pkg": "^0.4.3",
     "quaternion": "^1.4.6",
